examples/test/testpolicy911.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy911
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key10: value12
      key2: value27
      key9: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value31
      podSelector:
        matchLabels:
          key34: value35
          key36: value16
